split up constructor in endGamePrompt